fixed the scrollbar in chat

--- a/apps/web/version/css/chat.less
+++ b/apps/web/version/css/chat.less
@@ -93,7 +93,7 @@
     overflow: hidden;
 
     .chat-log-scroll-wrapper {
-      padding: 1rem;
+      padding: 0.5rem 0 0 1rem;
     }
 
     .chat-log {
